--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -4,6 +4,7 @@
 
 form .filter{width: 180px;}
 
+.table .actions {width: 160px;}
 .table-container{}
 .table-container .first{width: 2.3%;}
 .table-container .other{width: 7.6%;}
