fixing promises and deferred

--- a/app/views/user/supermercati.html
+++ b/app/views/user/supermercati.html
@@ -61,10 +61,10 @@
                                 <p>{{supermercato.capo_equipe.nome}}</p>
                             </td>
                             <td>
-                                <button class="btn btn-primary" ng-click="openDetails(supermercato)">Prodotti</button>
+                                <button class="btn btn-primary" ng-click="openProducts(supermercato)">Prodotti</button>
                                 <button
                                     class="btn btn-primary"
-                                    ng-click="openSetSupermercato(supermercato)">
+                                    ng-click="openDetails(supermercato)">
                                     Modifica
                                 </button>
                             </td>
