--- a/app/views/user/report.html
+++ b/app/views/user/report.html
@@ -5,7 +5,12 @@
     </div>
     <div class="container center-container">
         <div  ng-show="searchForm">
-            <div class="row">
+            <div class="row" ng-if="user.privilegi>1">
+                <form class="form-inline" ng-submit="getSupermercati()">
+                    <button class="btn btn-primary">Aggiorna</button>
+                </form>
+            </div>
+            <div class="row" ng-if="user.privilegi==1">
                 <form class="form-inline" ng-submit="getSupermercati()">
                     <select class="filter" ui-select2="{ allowClear: true}" ng-model="search.provincia" placeholder="Provincia">
                         <option ng-value=""></option>
