--- a/app/views/user/supermercato.html
+++ b/app/views/user/supermercato.html
@@ -45,7 +45,7 @@
                             </select>
                         </td>
                     </tr>
-                    <tr>
+                    <tr ng-if="user.privilegi==1">
                         <th>Area</th>
                         <td>
                             <select class="filter" ui-select2="{ allowClear: true}" ng-model="supermercato.info.id_area" placeholder="Area" required>
