--- a/deployment/views/user/report.html
+++ b/deployment/views/user/report.html
@@ -5,7 +5,12 @@
     </div>
     <div class="container center-container">
         <div  ng-show="searchForm">
-            <div class="row">
+            <div class="row" ng-if="user.privilegi>1">
+                <form class="form-inline" ng-submit="getSupermercati()">
+                    <button class="btn btn-primary">Aggiorna</button>
+                </form>
+            </div>
+            <div class="row" ng-if="user.privilegi==1">
                 <form class="form-inline" ng-submit="getSupermercati()">
                     <select class="filter" ui-select2="{ allowClear: true}" ng-model="search.provincia" placeholder="Provincia">
                         <option ng-value=""></option>
@@ -14,6 +19,10 @@
                     <select class="filter" ui-select2="{ allowClear: true}" ng-model="search.comune" placeholder="Comune">
                         <option ng-value=""></option>
                         <option ng-value="comune.id" ng-repeat="comune in comuni | filter:{id_provincia: provinciaSearch}">{{comune.nome}}</option>
+                    </select>
+                    <select class="filter" ui-select2="{ allowClear: true}" ng-model="search.colletta" placeholder="Colletta">
+                        <option ng-value=""></option>
+                        <option ng-value="coll.id" ng-repeat="coll in colletta">{{coll.nome}} {{coll.anno}}</option>
                     </select>
                     <button class="btn btn-primary">Genera</button>
                 </form>
@@ -137,7 +146,7 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr class="fsize10" ng-repeat="object in report|filter:{enabled:true,catena.nome:search.catena}">
+                        <tr class="fsize10" ng-repeat="object in report|filter:{enabled:true,catena.nome:search.catena}|orderBy:'comune'">
                             <td style="word-break:break-all;">{{object.nome}}</td>
                             <td style="word-break:break-all;">{{object.indirizzo}}</td>
                             <td style="word-break:break-all;">{{object.comune}}</td> 
@@ -169,6 +178,30 @@
                             <td>{{object.totali.scatole}}</td>
                         </tr>
                     </tbody>
+                    <tfoot>
+                        <tr class="fsize11">
+                            <th>KILI</th>
+                            <th></th>
+                            <th></th>
+                            <th colspan="2" class="tipo" ng-repeat="tot in totaliComplessivi.tipi|orderBy:tipo">
+                                <span class="pull-left" ng-init="tot.kg=parseInt(tot.kg)">{{tot.kg}}</span>
+                            </th>
+                            <th colspan="2">
+                                {{parseInt(totaliComplessivi.complessivo.kg)}}
+                            </th>
+                        </tr>
+                        <tr class="fsize11">
+                            <th>SCATOLE</th>
+                            <th></th>
+                            <th></th>
+                            <th colspan="2" class="tipo" ng-repeat="tot in totaliComplessivi.tipi|orderBy:tipo">
+                                <span class="pull-left" ng-init="tot.scatole=parseInt(tot.scatole)">{{tot.scatole}}</span>
+                            </th>
+                            <th colspan="2">
+                                {{parseInt(totaliComplessivi.complessivo.scatole)}}
+                            </th>
+                        </tr>
+                    </tfoot>
                     <!--
                     <tfoot>
                         <tr>
